# django_skillbox_app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/database/: db.sqlite3
mysite/myauth/: urls.py
mysite/mysite/: settings.py
mysite/shopapp/: forms.py
