[tool.poetry]
name = "django-skillbox-app"
version = "0.1.0"
description = ""
authors = ["Роман Лавдоренко <wertuozo@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-rest-framework = "^0.1.0"
django-debug-toolbar = "^4.4.6"
django-filter = "^24.3"
gunicorn = "^23.0.0"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
